--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"manifest_version": 2,
 	"name": "Email Extractor",
 	"description": "Extract email addresses from a webpage into a comma delimited list.",
-	"permissions": ["activeTab", "<all_urls>"],
+	"permissions": ["activeTab", "<all_urls>", "clipboardWrite"],
 	"background": {
 		"scripts": ["background.js"],
 		"persistent": false
